--- a/shrek/src/assets/scss/_common.scss
+++ b/shrek/src/assets/scss/_common.scss
@@ -666,7 +666,7 @@ hr {
 /*-- Section Padding -- */
 
 	.section-padding2{
-		padding-top: 200px;
+		// padding-top: 200px;
 		padding-bottom: 200px;
 		@media #{$laptop}{
 			padding-top: 200px;
